# popstock

./: .gitattributes  .gitignore  .gitlab-ci.yml  LICENSE  README.md  play.py  population_O3.py  pyproject.toml  reweight_vs_calc.py  setup.cfg  setup.py  training_omegas.py
.github%2Fworkflows/: pages.yml  pypi_publish.yml
.github/workflows/: main.yml  pypi_publish.yml
docs/: Makefile  about.rst  api.rst  basic_tutorial.ipynb  citing.rst  conf.py  demos.rst  index.rst  installation.rst
popstock/: PopulationOmegaGW.py  __init__.py  constants.py  util.py  util_LISA.py
popstock/.ipynb_checkpoints/: PopulationOmegaGW-checkpoint.py  util-checkpoint.py
sample_sets/: samples_1100000.json
scripts/: population_O3  population_O3_fixed_samples  population_O3_new_draws
test_data/: o1o2o3_mass_c_iid_mag_iid_tilt_powerlaw_redshift_result.json  test_hyper_samples.json
