[metadata]
name = popstock
description = population OmegaGW calculator
url = https://github.com/a-renzini/popstock/
author_email = aria.renzini@gmail.com
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[flake8]
exclude = .git,docs,build,dist,test,*__init__.py
max-line-length = 120
ignore = E129 W504 W503

[tool:pytest]
addopts = -p no:warnings


[tool:isort]
line_length=88
multi_line_output=3
include_trailing_comma=True
known_third_party=bilby,gwpy,numpy,scipy,tqdm
known_first_party=popstock

[codespell]
ignore-words-list=popstock
